# dx12_experiments

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  D3D12HelloTriangle.cpp  DX12_experiments.sln  DX12_experiments.vcxproj  DX12_experiments.vcxproj.filters  DXSampleHelper.h  README.md  Win32Application.cpp  main.cpp  stdafx.h
include/: application.hpp  camera.hpp  command_queue.hpp  common.hpp  descriptor_allocator.hpp  input.hpp  logging.hpp  upload_buffer.hpp  window.hpp
src/: DXSample.cpp  application.cpp  camera.cpp  command_queue.cpp  descriptor_allocator.cpp  input.cpp  logging.cpp  main.cpp  upload_buffer.cpp  vertex_shader.hlsl  window.cpp
src/modules/: application.ixx  camera.ixx  common.ixx  descriptor_allocator.ixx  upload_buffer.ixx
